[package]
name = "mosekcomodel_highs"
version = "0.4.2"
edition = "2024"

description = "HIGHS backend for mosekcomodel"
authors = [ "Ulf Worsøe <ulf.worsoe@mosek.com>" ]
keywords = ["highs","optimization","linear_programming"]
categories = ["mathematics","science"]
license = "MIT"
repository = "https://github.com/MOSEK/MosekCOModel.rust"
readme = "README.md"

[dependencies]
highs = "1.8.0"
itertools = "0.14.0"
mosekcomodel = "~0.4.0"
